--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -9,7 +9,7 @@
 	{{mensagem.texto}}
 </p>
 
-<button class="btn btn-primary" ng-click="incrementa()">Novo</button>
+<a class="btn btn-primary" ng-href="#/contato">Novo Contato</a>
 <input type="search" placeholder="parte do nome" ng-model="filtro">
 <div class="table-responsive">
 	<table class="table table-hover">
