--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -1,8 +1,8 @@
 <div class="jumbotron">
-	<h1 class="text-center">
-		Bem-vindo ao Contatooh!
+	<h3 class="text-center">
+		Bem-vindo ao Contatooh
 		<br>
-	</h1>
+	</h3>
 </div>
 
 <p ng-show="mesnagem.texto">
@@ -17,6 +17,7 @@
 			<th>Nome</th>
 			<th>E-mail</th>
 			<th class="text-center">Ação</th>
+			<th>Emergência</th>
 		</tr>
 		<tr ng-repeat="contato in contatos | filter:filtro">
 			<td>
@@ -26,6 +27,7 @@
 			<td class="text-center">
 				<button ng-click="remove(contato)" class="btn btn-warning">Remover</button>
 			</td>
+			<td>{{contato.emergencia.nome}}</td>
 		</tr>
 	</table>
 </div>
