--- a/app/views/404.ejs
+++ b/app/views/404.ejs
@@ -1,21 +1,24 @@
-<!docytype html>
+<!DOCTYPE HTML>
 <html>
 <head>
-	<title>Autenticação do Usuário</title>
+	<title>Página não encontrada</title>
 	<meta name="viewport" content="width=device-width">
 	<meta charset="UTF-8">
 	
-	<!-- build:css css/auth.min.css -->
+	<!-- build:css css/404.min.css -->
 	<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
 	<!-- endbuild -->
 </head>
-
 <body>
 	<div class="container">
-		<a href="/auth/github">
-			<h1 class="text-center">Entre pelo GitHub</h1>
-		</a>
+		<div class="jumbotron">
+			<h1>Página não encontrada!<h1>
+		</div>
+		
+		<h2 class="text-center">
+			<a href="/">Voltar para a página principal</a>
+		</h2>
 	</div>
 </body>
 </html>
