--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -28,6 +28,7 @@
 	<script src="js/main.js"></script>
 	<script src="js/services/ContatosService.js"></script>
 	<script src="js/controllers/ContatosController.js"></script>
+	<script src="js/directives/meus-componentes/meus-componentes.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
