--- a/public/partials/contato.html
+++ b/public/partials/contato.html
@@ -42,7 +42,8 @@
 		<button type="submit" class="btn btn-primary">
 			Salvar
 		</button>
-		<a href="#/" class="btn btn-default">
+		<!-- focus="btnBackFocus" -->
+		<a href="#/" class="btn btn-default" meu-focus evento="contatoSalvo">	
 			Voltar
 		</a>
 	</div>
