--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -9,31 +9,36 @@
 	{{mensagem.texto}}
 </p>
 
-<a class="btn btn-primary" ng-href="#/contato">Novo Contato</a>
-<input type="search" placeholder="parte do nome" ng-model="filtro">
-<div class="table-responsive">
-	<table class="table table-hover">
-		<tr>
-			<th>Nome</th>
-			<th>E-mail</th>
-			<th class="text-center">Ação</th>
-			<th>Emergência</th>
-		</tr>
-		<tr ng-repeat="contato in contatos | filter:filtro">
-			<td>
-				<a ng-href="#/contatos/{{contato._id}}">{{contato.nome}}</a>
-			</td>
-			<td>{{contato.email}}</td>
-			<td class="text-center">
-				<button ng-click="remove(contato)" class="btn btn-warning">Remover</button>
-			</td>
-			<td>{{contato.emergencia.nome}}</td>
-		</tr>
-	</table>
-</div>
 <p ng-show="contatos.length">
 	Contatos cadastrados: {{contatos.length}}
 </p>
+
+<a class="btn btn-primary" ng-href="#/contato">Novo Contato</a>
+<input type="search" placeholder="parte do nome" ng-model="filtro">
+
+<meu-painel titulo='Listagem de contatos'>
+	<div class="table-responsive">
+		<table class="table table-hover">
+			<tr>
+				<th>Nome</th>
+				<th>E-mail</th>
+				<th class="text-center">Ação</th>
+				<th>Emergência</th>
+			</tr>
+			<tr ng-repeat="contato in contatos | filter:filtro">
+				<td>
+					<a ng-href="#/contatos/{{contato._id}}">{{contato.nome}}</a>
+				</td>
+				<td>{{contato.email}}</td>
+				<td class="text-center">
+					<meu-botao-aviso nome="Remover" acao="remove(contato)"></meu-botao-aviso>
+				</td>
+				<td>{{contato.emergencia.nome}}</td>
+			</tr>
+		</table>
+	</div>
+</meu-painel>
+
 <p class="text-info" ng-hide="contatos.length">
 	Não há contatos cadastrados
 </p>
